--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/runtime": "^7.22.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "bulma": "^0.9.4",
     "core-js": "^3.30.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
